<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@android:color/background_dark"
                android:orientation="vertical">


    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_single_video"
            android:text="@string/sample_single_video"
            android:onClick="onClick"
            />
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_multiple_videos"
            android:text="@string/sample_multiple_videos"
            android:onClick="onClick"
            />
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_set_cover"
            android:text="@string/sample_set_cover"
            android:onClick="onClick"
            />
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_without_set_cover"
            android:text="@string/sample_with_title"
            android:onClick="onClick"
            />
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_more_element"
            android:text="@string/sample_more_element"
            android:onClick="onClick"
            />
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_more_element_hide_actionbar"
            android:text="@string/sample_more_element_hide_actionbar"
            android:onClick="onClick"
            />
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_load_url"
            android:text="@string/sample_load_url"
            android:onClick="onClick"
            />
</LinearLayout>